--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
     	<script src="aframe-v1.6.0.min.js"></script>
     	<script src="aframe-ar.js"></script>
-	<script src="gesture-detector.js"></script>
-    	<script src="gesture-handler.js"></script>
-	<!--<script src="aframe-transparent-video-shader.umd.js"></script>-->
+		<script src="gestures.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	</head>
 <body style="margin : 0px; overflow: hidden;">
@@ -107,3 +105,4 @@ function goURL6()
 	</script>
 
 </html>
+
